--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.searchspring.nextopia</groupId>
   <artifactId>searchspring-converter</artifactId>
-  <version>0.0.1</version>
+  <version>#1</version>
 
   <properties>
     <maven.compiler.source>1.7</maven.compiler.source>
