--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: Build with Maven
-        run: mvn -B test package --file pom.xml
+        run: mvn -B test compile package --file pom.xml
       - name: Upload the artifacts
         uses: skx/github-action-publish-binaries@master
         env:
