--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,12 @@
 
   <groupId>com.searchspring.nextopia</groupId>
   <artifactId>searchspring-converter</artifactId>
-  <version>0.0.6</version>
+  <version>0.0.7</version>
 
   <properties>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
